--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -53,7 +53,7 @@ body {
 
 .menu {
     height: 70px;
-    width: 1000px;
+    width: 1100px;
     display: flex;
     justify-content: space-evenly;
     padding-top: 16px;
@@ -82,15 +82,17 @@ body {
 }
 
 .menu-title {
+    margin-top: 8px;
     position: relative;
     bottom: 10px;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     color: #00249c;
 }
 
-.dropdown {
-    font-size: 16px;
+.checklist {
+    font-size: 18px;
+    font-weight: bold;
     
     
 }
