--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: "Consolas", sans-serif;
     margin: 0;
-    background-color: #F7F7F7;
+    background-color: #fff;
 }
 
 .header {
@@ -48,7 +48,7 @@ body {
 
 .card {
     margin-bottom: 24px;
-    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+   
 }
 
 .menu {
@@ -60,6 +60,7 @@ body {
     margin: 0 auto 0 auto;
     background-color: #FFFFFF;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+    
 }
 
 .Select-control {
